[package]
name = "rsump"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsump"
path = "src/bin/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.72"
bytes = { version = "1.4.0", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
fred = "6.3.0"
futures = "0.3.28"
kdam = "0.4.0"
rmp-serde = "1.1.2"
serde = { version = "1.0.180", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
